Fix mailto: form submission.  Bug 191248, patch by dgk@metrocast.net (David G King (nee dgk@lr.net)), r=sspitzer, sr=bzbarsky, a=asa